Getting the content sorted. Getting the vertical spacing fixed. Changing a lot this morning.

--- a/assets/main-ian.scss
+++ b/assets/main-ian.scss
@@ -109,6 +109,7 @@ html {
     font-size: 16px;
 }
 body{
+    min-height: 3000px;
     margin:0;
     background-color:#F6FCFF;
     background-image: url("..//assets/background_stripes.svg");
@@ -213,7 +214,7 @@ h1{
     width:100%;
     left:0;
 }
-#header>h1{
+#header > h1{
     font-family: "Forza A" ,"Forza B",sans-serif;
     font-style: italic;
     font-weight: 500;
@@ -223,7 +224,7 @@ h1{
     padding: 2rem 3rem 2rem 0.5rem;
     font-size: 4.5rem;
     color: #FFF;
-    margin: 4rem 0;
+    margin: 1.6813rem 0;
 }
 #dynamic-button-container{
     display:flex;
@@ -272,13 +273,18 @@ h1,h2,h3,h4,h5,h6{
     font-size:2rem;
     margin:0 0 1rem 0;
 }
-#about-me-page h4{
+#about-me-page h3{
     font-size:1.8rem;
     text-indent:3rem;
     font-style: italic;
     margin:0;
 }
-#about-me-page p{text-indent:0!important;margin-left:3rem;}
+#about-me-page p
+{
+    text-indent:0!important;
+    margin-left:3rem;
+}
+
 .job_title_block{
 
     margin-left:1.5rem;
